[package]
name = "ref-eglib"
version = "0.2.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
reframework_api_rs = { path = "../reframework-api-rs" }
log = "0.4"
anyhow = "1.0"
mlua = { version = "0.10", features = ["lua54", "vendored", "send", "serialize"] }
thiserror = "2.0"
parking_lot = "0.12"
windows = { version = "0.61", features = [
    "Win32_System_SystemServices",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
] }
bitflags = "2.9"
serde = { version = "1.0.219", features = ["derive"] }
