[package]
name = "ref-eglib"
version = "0.4.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
reframework_api_rs = { git = "https://github.com/paean-of-guidance/reframework-api-rs.git" }
# mlua = { path = "../mlua-for-ref", features = ["lua54", "vendored", "send", "serialize"] }
mlua = { git = "https://github.com/eigeen/mlua-for-ref.git", features = [
    "lua54",
    "vendored",
    "send",
    "serialize",
] }

log = "0.4"
anyhow = "1.0"
thiserror = "2.0"
parking_lot = "0.12"
windows = { version = "0.61", features = [
    "Win32_System_SystemServices",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
] }
bitflags = "2.9"
serde = { version = "1.0", features = ["derive"] }
rfd = "0.15"
rand = "0.9"
chrono = "0.4"
tokio = { version = "1.46.1", features = ["parking_lot", "rt-multi-thread"] }
reqwest = { version = "0.12.22", features = ["json"] }
serde_json = "1.0.140"
